# GurneyAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GURNEY_VOICE_PLAN.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: 01-setup-and-deployment.md  02-repository-and-architecture.md  03-extensions-and-authoring.md  04-operations-and-troubleshooting.md  05-multi-agent.md  architecture.md  cli-reference.md  configuration-reference.md  database-schema.md  deploying-on-raspberry-pi.md  deploying-with-docker.md  extension-authoring.md  getting-started.md  google-oauth-setup.md  gurney-frontend-design-prompt.md  hardware-and-performance.md  index.md  migrating-from-atlas.md  release-checklist.md  telegram-commands.md  troubleshooting.md
docs/extensions/: gurney-everyday-assistant.md  gurney-instant-responses.md  gurney-memgraph.md  gurney-routines.md  gurney-tts.md  gurney-voice.md  (+1 more)
extensions/: registry.json  tsconfig.base.json
firmware/gurney-speaker/main/: CMakeLists.txt  app_main.c  audio_in.c  audio_in.h  audio_out.c  audio_out.h  buttons.c  buttons.h  config.h  idf_component.yml  nvs_store.c  nvs_store.h  protocol.c  protocol.h  ui.c  ui.h  ws_client.c  ws_client.h
future-plans/: README.md  agentic-safety-and-browser-automation.md  gurney-tudor-guided-learning.md
scripts/: bench-kvcache.mjs  bench-spec-decode.mjs  copy-migrations.mjs  run-tests.mjs
src/: skeleton.test.ts
(+405 files in other folders)
