idf_component_register(
    SRCS
        "app_main.c"
        "protocol.c"
        "ws_client.c"
        "audio_in.c"
        "audio_out.c"
        "ui.c"
        "buttons.c"
        "nvs_store.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        driver
        esp_lcd
        spi_flash
)
